# Heimdall

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  partitions.csv  sdkconfig.defaults  sdkconfig.hardened  sdkconfig.old
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
components/dns_server/: CMakeLists.txt  dns_server.c  dns_server.h
components/identity/: CMakeLists.txt  Kconfig  identity.c  identity.h
components/mqtt_relay/: CMakeLists.txt  Kconfig  mqtt_relay.c  mqtt_relay.h
components/opsec/: CMakeLists.txt  Kconfig  opsec.c  opsec.h
components/portal/: CMakeLists.txt  Kconfig  portal.c  portal.h
components/portal/portal_html/: index.html  login.html  rebooting.html  secrets.html
components/storage/: CMakeLists.txt  Kconfig  idf_component.yml  storage.c  storage.h
components/wifi_sta/: CMakeLists.txt  Kconfig  wifi_sta.c  wifi_sta.h
components/wol/: CMakeLists.txt  Kconfig  wol.c  wol.h
docs/: README.md  index.html  manifest_hardened.json  manifest_standard.json
main/: CMakeLists.txt  Kconfig.projbuild  main.c
scripts/: ota_push.sh  setup_wol_windows.ps1  wake.sh  wake_hardened.sh  wake_standard.sh
tests/opsec_test/: CMakeLists.txt  sdkconfig.defaults
tests/opsec_test/components/opsec/: CMakeLists.txt  Kconfig  mbedtls_host_mem.c  opsec.c  opsec.h
tests/opsec_test/main/: CMakeLists.txt  test_totp.c
